feat: completed sample application

--- a/.env
+++ b/.env
@@ -1,6 +1,9 @@
-DB_HOST=localhost
+DB_HOST=ruby.db.elephantsql.com
 DB_PORT=5432
-DB_USERNAME=luthfulahi
-DB_PASSWORD=adeola1999
-DB_DATABASE=rate_limiter
+DB_USERNAME=lyzizdfy
+DB_PASSWORD=fRQlUfsneYXdXtNzX3tPoTyKtRzt2K3P
+DB_DATABASE=lyzizdfy
 PORT=3000
+REDIS_HOST=redis-16198.c114.us-east-1-4.ec2.cloud.redislabs.com
+REDIS_PASSWORD=l6BR8cwImgAB6o2mKvWrtsCYMhFmcadd
+REDIS_PORT=16198
